-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.182 2008-02-17 04:54:58 guru Exp $
-----------------------------------------------------------------------------------------

2008-02-16	pwessel
	* grdmask.c:		Tiny bug for determining which hemisphere (N/S) unlikely to have
						had any effect.

2008-02-14	remko
	* gmt.h, gmt_init.c, gmt_calclock.c:	Removed #ifndef OLDCAL (assumed always true).

2008-02-13	pwessel
	* grdmask.c:		Needed to allow for some slop when comparing shrink to 0.0 since sometimes
				the result of acos is 1e-14 or thereabouts.
	
2008-02-11	pwessel
	* gmt_init.c:		-B processing of labels used an internal string that was too short,
				which could lead to label truncation.
	
2008-02-01	pwessel
	* bin/gmtlogo:		Now scales logo up properly to get better resolution

2008-01-31	pwessel
	* minmax.c:		Could get confused when longitudes crossed dateline or Greenwich,
				and OUTPUT_DEGREE_FORMAT could interfere with result

2008-01-30	remko
	* gmtselect.txt:	Fixed error in example (-Ns/k replaced by -Nk/s).
				Added to -M option: does not affect selection. Always done on point by
				point basis. However, it is a sensible suggestion to select by segment.

2008-01-22	pwessel
	* sample1d.c:		Calendar time knots did not get properly interpreted with -N.

2008-01-15	pwessel
	* mgd77/mgd77.c:	Wrong header order written if mgd77convert .. -Tt was used

2008-01-09	remko
	* gmt_init.c:		Fixed "Holiday-bug" in GMT_parse_J_option introduced 2007-12-21.
				GMT_str_tolower could run out of bounds. Probably only affected 32-bit
				compilers.
	* gmt_support.c (GMT_strlcmp):	Now ignores case.

2007-12-30	remko
	* gmt_defaults.h:	Removed. Merged into gmt_globals.h
	* gmt_globals.h:	Now has gmt_defaults.h embedded
	* gmtalldeps.macros, src/makefile: Improved dependencies
	* gmt_calclock.h:	Should not include gmt.h (it is included by gmt.h)